--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "engines": {
     "node": "^18 || ^16",
     "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
+    "yarn": ">= 1.21.1",
+    "pnpm": ">= 8.0.0"
   }
 }
