--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node": "^18 || ^16",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1",
-    "pnpm": ">= 8.0.0"
-  }
+    "pnpm": ">= 8.6.5"
+  },
+  "packageManager": "pnpm@8.6.5"
 }
