--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "prettier": "^3.0.0"
   },
   "engines": {
-    "node": "^18 || ^16",
+    "node": "^20",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1",
     "pnpm": ">= 8.6.5"
