--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
-    "@quasar/extras": "^1.16.5",
-    "quasar": "^2.12.3",
-    "vue": "^3.3.4",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.4"
+    "@quasar/extras": "^1.16.11",
+    "quasar": "^2.15.4",
+    "vue": "^3.4.26",
+    "vue-i18n": "^9.13.1",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@ffmpeg/core": "^0.11.0",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
-    "@quasar/app-vite": "^2.0.0-beta.5",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-vue": "^9.16.0",
-    "postcss": "^8.4.31",
-    "prettier": "^3.0.0",
+    "@quasar/app-vite": "2.0.0-beta.11",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.25.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "vite-plugin-checker": "^0.6.4"
   },
   "engines": {
